--- a/index.html
+++ b/index.html
@@ -22,22 +22,47 @@
         <img class="vue-logo" src="https://vuejs.org/images/logo.png" /> Card
         Shuffling
       </h1>
+      <div class="speed-buttons">
+        <button
+          class="button is-small"
+          :class="{ 'is-light': shuffleSpeed != 'shuffleSlow' }"
+          @click="shuffleSpeed = 'shuffleSlow'"
+        >
+          Slow
+        </button>
+        <button
+          class="button is-small"
+          :class="{ 'is-light':shuffleSpeed != 'shuffleMedium' }"
+          @click="shuffleSpeed = 'shuffleMedium'"
+        >
+          Medium
+        </button>
+        <button
+          class="button is-small"
+          :class="{ 'is-light':shuffleSpeed != 'shuffleFast' }"
+          @click="shuffleSpeed = 'shuffleFast'"
+        >
+          Fast
+        </button>
+      </div>
       <div class="main-buttons">
         <button @click="shuffleDeck" class="button is-primary">
           Shuffle <i class="fas fa-random"></i>
         </button>
       </div>
       <div class="deck">
-        <div
-          v-for="card in cards"
-          :key="card.id"
-          class="card"
-          :class="suitColor[card.suit]"
-        >
-          <span class="card__suit card__suit--top">{{ card.suit }}</span>
-          <span class="card__number">{{ card.rank }}</span>
-          <span class="card__suit card__suit--bottom">{{ card.suit }}</span>
-        </div>
+        <transition-group :name="shuffleSpeed" tag="div" class="deck">
+          <div
+            v-for="card in cards"
+            :key="card.id"
+            class="card"
+            :class="suitColor[card.suit]"
+          >
+            <span class="card__suit card__suit--top">{{ card.suit }}</span>
+            <span class="card__number">{{ card.rank }} </span>
+            <span class="card__suit card__suit--bottom">{{ card.suit }}</span>
+          </div>
+        </transition-group>
       </div>
     </div>
 
